fix(ebook--ftb-navigation): patch as per QA
-   horizontal overflow creating scrollbar
-   sticky nav has initial small scroll

--- a/_sass/_scaffolding.scss
+++ b/_sass/_scaffolding.scss
@@ -10,7 +10,6 @@ body {
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
   width: 100%;
-  width: 100vw;
   max-width: 1700px;
   height: 100%;
   margin: 0 auto;
